(executables
 (names tree sorting WGC add)
 (modules tree sorting WGC add)
 (preprocess
  (action
   (run
    %{project_root}/ppx/pp_distrib_gt_reify.exe
    -pp
    %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe
    --as-pp
    -new-typenames
    %{input-file})))
 (preprocessor_deps
  (file %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe)
  (file %{project_root}/ppx/pp_distrib_gt_reify.exe))
 (libraries GT OCanren))

(executable
 (name len)
 (modules len)
 (preprocess
  (action
   (run
    %{project_root}/ppx/pp_distrib_gt_reify.exe
    -pp
    %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe
    --as-pp
    %{input-file})))
 (preprocessor_deps
  (file %{project_root}/ppx/pp_distrib_gt_reify.exe)
  (file %{project_root}/camlp5/pp5+ocanren+dump.exe)
  (file %{project_root}/camlp5/pp5+gt+plugins+ocanren+logger+dump.exe)
  (file %{project_root}/camlp5/pp5+ocanren+o.exe))
 (libraries GT OCanren benchmark))

(executable
 (name JeepProblem)
 (modules JeepProblem)
 (preprocess
  (action
   (run
    %{project_root}/ppx/pp_distrib_gt_reify.exe
    -pp
    %{project_root}/camlp5/pp5+ocanren+dump.exe
    --as-pp
    %{input-file})))
 (preprocessor_deps
  (file %{project_root}/ppx/pp_distrib_gt_reify.exe)
  (file %{project_root}/camlp5/pp5+ocanren+dump.exe)
  (file %{project_root}/camlp5/pp5+ocanren+o.exe))
 (libraries GT OCanren))

(alias
 (name all)
 (deps tree.exe sorting.exe WGC.exe JeepProblem.exe len.exe))

(cram
 (deps
  tree.exe
  sorting.exe
  WGC.exe
  JeepProblem.exe
  ;
  ))
