(include_subdirs unqualified)

(library
 (name OCanren)
 (public_name OCanren)
 (modules
  Logic
  Core
  Stream
  Subst
  Term
  Env
  Runconf
  Disequality
  FairOCanren
  Reverse
  Sort
  Bottles
  Bridge
  Hanoi
  Option
  Bool
  Nat
  Pair
  List
  Timer
  Peep
  OCanren)
 (libraries GT mtime mtime.clock.os benchmark)
 (flags
  (:standard -rectypes -short-paths -w -49))
 (preprocess
  (action
   (run
    %{project_root}/camlp5/pp5+gt+plugins+dump.exe
    ; -D
    ; STATS
    %{input-file}))))
