(library
 (name ppx_distrib)
 (public_name OCanren-ppx.ppx_distrib)
 (kind ppx_rewriter)
 (libraries ppxlib.stdppx ppxlib OCanren-ppx.internals)
 (modules ppx_distrib ppx_distrib_expander)
 (flags
  (:standard -linkall))
 (inline_tests)
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect)))
