(library
 (name ppx_deriving_reify)
 (public_name OCanren-ppx.ppx_deriving_reify)
 (kind ppx_rewriter)
 (libraries base ppxlib OCanren-ppx.internals)
 (modules deriving_reify)
 (flags
  (:standard -warn-error -A -rectypes))
 (inline_tests)
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect)))
