(library
 (name ppx_deriving_reify)
 (public_name OCanren-ppx.ppx_deriving_reify)
 (kind ppx_rewriter)
 (libraries ppxlib ppxlib.stdppx OCanren-ppx.internals reify_impl)
 (modules deriving_reify)
 (flags
  (:standard -warn-error -A -rectypes))
 (inline_tests)
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect)))

(library
 (name reify_impl)
 (public_name OCanren-ppx.reify_impl)
 (modules reify_impl)
 (libraries ppxlib ppxlib.stdppx OCanren-ppx.internals)
 (inline_tests)
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect ppx_meta_lident)))

(library
 (name ppx_meta_lident)
 ; (public_name -)
 (kind ppx_rewriter)
 (libraries ppxlib ppxlib.stdppx)
 (modules ppx_meta_lident)
 (flags
  (:standard -warn-error -A))
 (inline_tests)
 (preprocess
  (pps ppxlib.metaquot ppx_inline_test ppx_expect)))
